--- a/MailGenius/index.html
+++ b/MailGenius/index.html
@@ -9,6 +9,22 @@
       <title>MailGenius</title>
    </head>
    <body>
-      <h1>hellow world</h1>
+      <header class="header">
+         <div class="container d-flex align-items-center">
+            <a href="#" class="logo">
+               <img src="img/logo.png" alt="logo">
+            </a>
+            <nav class="main-header-nav">
+               <a href="#">Email Consulting</a>
+               <a href="#">Contact Us</a>
+            </nav>
+            <nav class="info-header-nav">
+               <a href="#">Privacy Policy</a>
+               <a href="#">Disclaimer</a>   
+            </nav>
+         </div>
+         <!-- container -->
+      </header>
+      <!-- /.header -->
    </body>
 </html>
